// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible List renders 1`] = `
<DocumentFragment>
  <ul
    class="mdc-list"
  >
    <li
      class="mdc-list-item"
      tabindex="0"
    >
      <div
        class="mdc-list-item__ripple "
      />
      One
    </li>
    <div
      class="rmwc-collapsible-list"
    >
      <div
        class="rmwc-collapsible-list__handle"
      >
        <li
          class="mdc-list-item"
          tabindex="0"
        >
          <div
            class="mdc-list-item__ripple "
          />
          Handle
        </li>
      </div>
      <div
        class="rmwc-collapsible-list__children"
        style="max-height: 0px;"
      >
        <div
          class="rmwc-collapsible-list__children-inner"
        >
          <li
            class="mdc-list-item"
            tabindex="0"
          >
            <div
              class="mdc-list-item__ripple "
            />
            Two
          </li>
        </div>
      </div>
    </div>
  </ul>
</DocumentFragment>
`;

exports[`List SimpleListItem renders 1`] = `
<DocumentFragment>
  <ul
    class="mdc-list"
  >
    <li
      class="mdc-list-item"
      tabindex="0"
    >
      <div
        class="mdc-list-item__ripple "
      />
      <div
        class="mdc-list-item__ripple "
      />
      <i
        aria-hidden="true"
        class="rmwc-icon rmwc-icon--ligature material-icons mdc-list-item__graphic"
      >
        star_border
      </i>
      Cookies
    </li>
    <li
      class="mdc-list-item"
      tabindex="0"
    >
      <div
        class="mdc-list-item__ripple "
      />
      <div
        class="mdc-list-item__ripple "
      />
      <i
        aria-hidden="true"
        class="rmwc-icon rmwc-icon--ligature material-icons mdc-list-item__graphic"
      >
        star_border
      </i>
      <span
        class="mdc-list-item__text"
      >
        <span
          class="mdc-list-item__primary-text"
        >
          Cookies
        </span>
        <span
          class="mdc-list-item__secondary-text"
        >
          Chocolate chip
        </span>
      </span>
    </li>
    <li
      class="mdc-list-item"
      tabindex="0"
    >
      <div
        class="mdc-list-item__ripple "
      />
      <div
        class="mdc-list-item__ripple "
      />
      <i
        aria-hidden="true"
        class="rmwc-icon rmwc-icon--ligature material-icons mdc-list-item__graphic"
      >
        star_border
      </i>
      <span
        class="mdc-list-item__text"
      >
        <span
          class="mdc-list-item__primary-text"
        >
          Cookies
        </span>
        <span
          class="mdc-list-item__secondary-text"
        >
          Chocolate chip
        </span>
      </span>
      <div
        class="mdc-list-item__meta"
      >
        info
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`List renders 1`] = `
<DocumentFragment>
  <ul
    class="mdc-list"
  >
    <li
      class="mdc-list-item"
      tabindex="0"
    >
      <div
        class="mdc-list-item__ripple "
      />
      <i
        aria-hidden="true"
        class="rmwc-icon rmwc-icon--ligature material-icons mdc-list-item__graphic"
      />
      <span
        class="mdc-list-item__primary-text"
      >
        Cookies
      </span>
      <div
        class="mdc-list-item__meta"
      />
    </li>
    <li
      class="mdc-list-item"
      tabindex="0"
    >
      <div
        class="mdc-list-item__ripple "
      />
      <i
        aria-hidden="true"
        class="rmwc-icon rmwc-icon--ligature material-icons mdc-list-item__graphic"
      />
      <span
        class="mdc-list-item__primary-text"
      >
        Cookies
      </span>
      <div
        class="mdc-list-item__meta"
      />
    </li>
  </ul>
</DocumentFragment>
`;
